# VARC

./: EXPERIMENT_LOG.md  README.md  offline_train_ARC.py  pyproject.toml  test_time_train_ARC.py  train_bottleneck.py  train_v2.py  train_v2_multi.py
experiments/physics_priors/: README.md  download_range.py  evaluate_prediction_subset.py  learned_relation_ranker.py  manifold_attention_synthetic.py  mechanism_diverse_eval.py  meta_prediction_diagnostic.py  meta_prediction_ranker_cv.py  meta_prediction_ranker_train_eval.py  object_transport_arc_search.py  object_transport_synthetic.py  paint_symbolic_search.py  parallel_ttt_runner.py  physics_reranker.py  prediction_meta_ranker_cv.py  prediction_meta_ranker_train_eval.py  prepare_ttt_variant.py  rerank_varc_predictions.py  run_ttt_subset.py  selection_strategy_search.py  selector_controller_synthetic.py  symbolic_candidate_search.py  symbolic_controller_train_eval.py  symbolic_diverse_eval.py  synthetic_symmetry_gate.py  variable_selector_search.py
experiments/physics_priors/results/: meta_ranker_cv_eval_first20_e20.json  meta_ranker_train_meta50_eval_meta20.json
script/: setup_cloud.sh  train_bottleneck_cloud.sh
src/: ARC_Bottleneck.py  ARC_Bottleneck_loader.py  ARC_Bottleneck_loader_v2.py  ARC_Bottleneck_v2.py
utils/: analyze_prediction.py  args.py  distribution.py  eval_utils_ttt.py
